--- a/VSReact.Web/package.json
+++ b/VSReact.Web/package.json
@@ -7,13 +7,15 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "babel-core": "^5.6.18",
     "classnames": "^2.1.2",
+    "isomorphic-fetch": "^2.2.0",
     "react": "^0.13.3",
     "react-redux": "^3.0.0",
-    "redux": "^3.0.0"
+    "redux": "^3.0.0",
+    "redux-thunk": "^1.0.0"
   },
   "devDependencies": {
-    "babel-core": "^5.6.18",
     "babel-loader": "^5.1.4",
     "node-libs-browser": "^0.5.2",
     "raw-loader": "^0.5.1",
