--- a/VSReact.Web/VSReact.Web.csproj
+++ b/VSReact.Web/VSReact.Web.csproj
@@ -89,6 +89,7 @@
     <Content Include="app\reducers\index.js" />
     <Content Include="app\reducers\todos.js" />
     <Content Include="server.js" />
+    <Content Include="webpack.prod.config.js" />
     <Content Include="webpack.config.js" />
   </ItemGroup>
   <ItemGroup>
