--- a/VSReact.Web/package.json
+++ b/VSReact.Web/package.json
@@ -4,7 +4,11 @@
   "description": "VS 2015 and React",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "node_modules/.bin/webpack --config webpack.config.js --progress --profile --colors",
+    "prod": "NODE_ENV=production webpack -p --config webpack.prod.config.js --progress --colors",
+    "prod_windows": "set NODE_ENV=production&&webpack -p --config webpack.prod.config.js --progress --colors",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "classnames": "^2.1.2",
@@ -17,6 +21,7 @@
   "devDependencies": {
     "babel-core": "^5.6.18",
     "babel-loader": "^5.1.4",
+    "html-webpack-plugin": "^1.7.0",
     "node-libs-browser": "^0.5.2",
     "raw-loader": "^0.5.1",
     "react-hot-loader": "^1.3.0",
