--- a/VSReact.Web/VSReact.Web.csproj
+++ b/VSReact.Web/VSReact.Web.csproj
@@ -25,7 +25,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
-    <TypeScriptToolsVersion>1.7</TypeScriptToolsVersion>
+    <TypeScriptToolsVersion>1.8</TypeScriptToolsVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -70,8 +70,10 @@
   <ItemGroup>
     <Content Include=".babelrc" />
     <Content Include="app\actions\TodoActionsAsyncBackend.js" />
+    <Content Include="app\containers\DevTools.js" />
     <Content Include="app\index.js" />
     <Content Include="app\reducers\todosAsyncBackend.js" />
+    <Content Include="app\store\configureStore.js" />
     <Content Include="package.json" />
   </ItemGroup>
   <ItemGroup>
