--- a/VSReact.Web/package.json
+++ b/VSReact.Web/package.json
@@ -1,32 +1,40 @@
 {
   "name": "VSReact",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "VS 2015 and React",
-  "main": "server.js",
+  "license": "MIT",
+  "repository": "https://github.com/martijnboland/VSReact",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.config.js --hot --progress --colors",
+    "start": "webpack-dev-server --config webpack.config.js --hot --progress --colors --devtool source-map",
     "build": "webpack --config webpack.config.js --progress --profile --colors",
     "prod": "webpack -p --config webpack.prod.config.js --progress --colors"
   },
   "dependencies": {
-    "classnames": "^2.1.2",
-    "isomorphic-fetch": "^2.2.0",
-    "react": "^0.13.3",
-    "react-redux": "^3.0.0",
-    "redux": "^3.0.0",
-    "redux-thunk": "^1.0.0"
+    "classnames": "^2.2.5",
+    "isomorphic-fetch": "^2.2.1",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-hot-loader": "^3.0.0-beta.1",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
-    "babel-core": "^5.6.18",
-    "babel-loader": "^5.1.4",
-    "html-webpack-plugin": "^1.7.0",
-    "node-libs-browser": "^0.5.2",
+    "babel-cli": "^6.3.17",
+    "babel-core": "^6.3.17",
+    "babel-loader": "^6.2.0",
+    "babel-preset-es2015-loose": "^6.1.3",
+    "babel-preset-react": "6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "html-webpack-plugin": "2.17.0",
+    "node-libs-browser": "^1.0.0",
     "raw-loader": "^0.5.1",
-    "react-hot-loader": "^1.3.0",
-    "redux-devtools": "^2.1.5",
-    "style-loader": "^0.12.3",
-    "todomvc-app-css": "^2.0.1",
-    "webpack": "^1.9.11",
-    "webpack-dev-server": "^1.9.0"
+    "redux-devtools": "^3.3.1",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.0.11",
+    "style-loader": "^0.13.1",
+    "todomvc-app-css": "^2.0.6",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   }
 }
