--- a/VSReact.Web/package.json
+++ b/VSReact.Web/package.json
@@ -1,6 +1,6 @@
 {
   "name": "VSReact",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "VS 2015 and React",
   "license": "MIT",
   "repository": "https://github.com/martijnboland/VSReact",
@@ -12,29 +12,29 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "isomorphic-fetch": "^2.2.1",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
+    "prop-types": "^15.5.10",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
     "react-hot-loader": "^3.0.0-beta.1",
-    "react-redux": "^4.4.5",
-    "redux": "^3.5.2",
-    "redux-thunk": "^2.1.0"
+    "react-redux": "^5.0.5",
+    "redux": "^3.7.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.3.17",
-    "babel-core": "^6.3.17",
-    "babel-loader": "^6.2.0",
-    "babel-preset-es2015-loose": "^6.1.3",
-    "babel-preset-react": "6.3.13",
-    "babel-preset-stage-0": "^6.3.13",
-    "html-webpack-plugin": "2.17.0",
-    "node-libs-browser": "^1.0.0",
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "html-webpack-plugin": "2.28.0",
     "raw-loader": "^0.5.1",
-    "redux-devtools": "^3.3.1",
-    "redux-devtools-dock-monitor": "^1.1.1",
-    "redux-devtools-log-monitor": "^1.0.11",
-    "style-loader": "^0.13.1",
-    "todomvc-app-css": "^2.0.6",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "redux-devtools": "^3.4.0",
+    "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools-log-monitor": "^1.3.0",
+    "style-loader": "^0.18.2",
+    "todomvc-app-css": "^2.1.0",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.5.0"
   }
 }
