--- a/VSReact.Web/package.json
+++ b/VSReact.Web/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "isomorphic-fetch": "^2.2.1",
-    "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "^3.0.0-beta.1",
@@ -21,19 +20,22 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-loader": "^7.1.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "@types/core-js": "^0.9.42",
+    "@types/node": "^8.0.5",
+    "@types/react": "^15.0.33",
+    "@types/react-dom": "^15.5.1",
+    "@types/webpack-env": "^1.13.0",
+    "awesome-typescript-loader": "^3.2.1",
+    "core-js": "^2.4.1",
     "html-webpack-plugin": "2.28.0",
     "raw-loader": "^0.5.1",
     "redux-devtools": "^3.4.0",
     "redux-devtools-dock-monitor": "^1.1.2",
     "redux-devtools-log-monitor": "^1.3.0",
+    "source-map-loader": "^0.2.1",
     "style-loader": "^0.18.2",
     "todomvc-app-css": "^2.1.0",
+    "typescript": "^2.4.1",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.5.0"
   }
