--- a/VSReact.Web/package.json
+++ b/VSReact.Web/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "classnames": "^2.2.5",
     "isomorphic-fetch": "^2.2.1",
+    "mobx": "^3.1.16",
+    "mobx-react": "^4.2.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "^3.0.0-beta.1",
