Working mobx version without API calls

--- a/VSReact.Web/VSReact.Web.csproj
+++ b/VSReact.Web/VSReact.Web.csproj
@@ -72,8 +72,10 @@
     <TypeScriptCompile Include="app\containers\DevTools.tsx" />
     <TypeScriptCompile Include="app\index.tsx" />
     <TypeScriptCompile Include="app\reducers\todosAsyncBackend.ts" />
+    <TypeScriptCompile Include="app\store\AppState.ts" />
     <TypeScriptCompile Include="app\store\configureStore.ts" />
     <Content Include="package.json" />
+    <TypeScriptCompile Include="app\store\TodoStore.ts" />
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="app\actions\TodoActions.ts" />
