--- a/VSReact.Web/package.json
+++ b/VSReact.Web/package.json
@@ -14,6 +14,7 @@
     "classnames": "^2.2.5",
     "mobx": "^3.1.16",
     "mobx-react": "^4.2.1",
+    "mobx-react-devtools": "^4.2.15",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "^3.0.0-beta.1"
